<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">YYDRobotVideo</string>
    <string name="action_settings">Settings</string>
    <string name="add_friend">Add frined</string>
    <string name="remove_friend">Remove friend</string>
    <string name="edit_friend_nickname">Modify nickname</string>
    <string name="camera">Camera</string>
    <string name="robot">robot</string>
    <string name="robotid">robot</string>
    <string name="roomid">room</string>
    <string name="phonenumber">phone</string>
    <string name="leftslash">/</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="number_zero">0</string>
    <string name="number_asterisk">*</string>
    <string name="number_pound">#</string>
    <string name="nofound_image">Notfound_image</string>
    <string name="friendlist">friend list</string>
    <string name="calllist">call list</string>
    <string name="invite_calling">calling：</string>
    <string name="invite_replying">video intite</string>
    <string name="default_name">xiaoyong</string>
    <string name="network_error">Network error, please check !</string>
    <string name="cannot_call_self">Cann\'t call number of this.</string>
    <string name="myid">my id</string>
    <string name="phone_user">Phone</string>
    <string name="input_number_hint">Robot id or telephone</string>
    <string name="select_videosize">Please select video size：</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="The_other_party_did_not_answer">The peer did not answer</string>
    <string name="The_other_party_has_declined">The other party has declined your call request.</string>
    <string name="robot_id_error">Robot id error</string>
    <string name="read_robot_id_error">Read robot id error</string>
    <string name="not_network_error">No network, please check the network</string>
    <string name="system_time_error">System time error, please setting time</string>
    <string name="server_request_error">Server request failed, please check the network</string>
    <string name="connect_server_failed">Connect failed to server, please check the network</string>
    <string name="connect_not_success">The connection server is not successful, please check the network</string>
    <string name="user_not_online">User not online</string>
    <string name="cannot_createmeeting_noowner">Non owner can not establish a meeting</string>
    <string name="meetingmember_cannot_morethan_four">Meeting members can not be more than 4 people</string>
    <string name="monitoring_cannot_createmeeting">Monitoring can not be established in the meeting, please turn off the monitor and try again.</string>
    <string name="calltype_error">CallType error</string>
    <string name="create_meeting_frequently_error">Creating video conference is too frequent, please try later.</string>
    <string name="not_selected_user">Not selected user</string>
    <string name="new_friend">New Friend</string>
    <string name="friend_type">Friend Type: </string>
    <string name="friend_number">Friend Number: </string>
    <string name="friend_alias">Alias: </string>
    <string name="friend_type_robot">Robot</string>
    <string name="friend_type_phone">Telephone</string>
    <string name="friend_exists">The number is already your friend!</string>
    <string name="add_friend_success">Add Friend Success</string>
    <string name="add_friend_failed">Add Friend failure</string>
    <string name="remove_friend_success">Remove friend success</string>
    <string name="remove_friend_failed">Remove friend failure</string>
    <string name="modify_friend_success">Modify friend nickname success</string>
    <string name="modify_friend_failed">Modify friend nickname failure</string>
    <string name="command_notexec">Command Not Execute</string>
    <string name="command_timeout">Command Timeout</string>
    <string name="meeting_invite">Meeting invite</string>
    <string name="residual_time">剩余时间：</string>
    <string name="residual_time_default">0分钟</string>
    <string name="pay_help">帮助</string>
    <string name="pay_type_select_title">请选择充值时长：</string>
    <string name="pay_type_one">50分钟/10元</string>
    <string name="pay_type_two">100分钟/20元</string>
    <string name="pay_type_three">200分钟/40元</string>
    <string name="pay_type_four">500分钟/100元</string>
    <string name="pay_type_five">1000分钟/200元</string>
    <string name="pay_type_six">5000分钟/1000元</string>
    <string name="pay_method_title">请选择支付方式：</string>
    <string name="pay_alipay">支付宝</string>
    <string name="pay_weixin">微信</string>
    <string name="pay_confirm">确定</string>
    <string name="recharge_title">充值</string>
    <string name="robot_id">机器人ID号：</string>
    <string name="robot_id_default">123456789</string>
    <string name="pay_time_title">充值时长：</string>
    <string name="pay_time_default">50分钟</string> 
    <string name="pay_amount">支付金额：</string>
    <string name="pay_amount_default">10元</string>
    <string name="rechange_weixin_tip">请使用微信扫描二维码进行支付</string>
    <string name="rechange_alipay_tip">请使用支付宝扫描二维码进行支付</string>
    <string name="recharge_notes_title">充值须知</string>
    <string name="pay_yuan">元</string>
    <string name="pay_minute">分钟</string>
    <string name="generate_qrcode_error">生成二维码失败</string>
    <string name="recharge_notes">1.电话时长充值规则：1分钟=0.2元\n2.只能给本台终端进行充值 \n3.此处充值仅支持微信充值以及支付宝充值，充值后电话时长预计10分钟内到账 \n4.充值分钟数目前仅限中国大陆地区电话号码\n</string>
    <string name="query_time_tip">\t\t主人，您的剩余通话时长不足10分钟，为了保证您的视频通话顺畅，请及时充值。</string>
    <string name="query_time_zero_tip">\t\t主人，您的通话时长已经使用完毕,请及时充值。</string>
    <string name="known_tip">知道了</string>
    <string name="query_time_error">查询剩余时间失败，请检查网络后重试</string>
    <string name="recharge_sucess">充值成功</string>
    <string name="recharge_false">充值失败</string>
    <string name="query_recharge_status_false">无法查询当前机器人充值状态</string>
</resources>
