<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center_vertical" >
<TextView
    android:id="@+id/tip_tv" 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/query_time_tip"
    android:textStyle="bold"
    android:textSize="20sp"
    />    
<RelativeLayout 
    android:layout_marginTop="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
    <Button 
        android:id="@+id/tip_dialog_confirm"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/recharge_title"
        android:layout_alignParentStart="true"
        />
    <Button 
        android:id="@+id/tip_dialog_cancel"
	    android:layout_width="100dp"
	    android:layout_height="wrap_content"
	    android:text="@string/known_tip"
	    android:layout_alignParentEnd="true"
    />
</RelativeLayout>
</LinearLayout>
