<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="20dp" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_friend_nickname"
        android:textColor="#000" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="3" >

        <TextView
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:gravity="end"
            android:padding="5dp"
            android:text="@string/friend_type"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/tv_friend_type"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:text="@string/friend_type"
            android:textColor="#000000" />
        
        <TextView
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:gravity="end"
            android:padding="5dp"
            android:text="@string/friend_number"
            android:textColor="#000" />
        
        <TextView
            android:id="@+id/tv_friend_number"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:text="@string/friend_number"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/tv_friend_alias"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:gravity="end"
            android:padding="5dp"
            android:text="@string/friend_alias"
            android:textColor="#000" />

        <EditText
            android:id="@+id/edt_friend_alias"
            android:layout_column="1"
            android:layout_gravity="start|top"
            android:ems="10"
            android:inputType="number"
            android:labelFor="@+id/edt_friend_alias" >

            <requestFocus />
        </EditText>
    </GridLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:gravity="center" >

            <Button
                android:id="@+id/btn_ok"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/ok" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:gravity="center" >

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/cancel" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>