<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:layout_gravity="center"
    android:background="#FFF" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_videosize"
            android:textColor="#000" />

        <Spinner
            android:id="@+id/spinner1"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:baselineAligned="false"
            android:gravity="center"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:gravity="center" >

                <Button
                    android:id="@+id/btn_ok"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/ok" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:gravity="center" >

                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel" />
            </LinearLayout>
            
        </LinearLayout>
        
    </LinearLayout>
    
</LinearLayout>